<resources>
    <string name="app_name">BE Driver</string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="country">Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="select_country">Select Country</string>
    <string name="next">NEXT</string>
    <string name="licensnumber">License Number</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="welcome_to_bahama_eats">Welcome to Bahama Eats</string>
    <string name="reset">RESET</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="issued_on">Issued on</string>
    <string name="expired">Expired</string>
    <string name="license_type">License Type</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="change_password">Change Password</string>
    <string name="documents">Documents</string>
    <string name="documentation">Documentation</string>
    <string name="validate">VALIDATE</string>
    <string name="validate_code_in">Validate code in 00:</string>
    <string name="validate_code_in_">Validate code in</string>
    <string name="done">DONE</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="wallet">Wallet</string>
    <string name="deliveries">Deliveries</string>
    <string name="use_camera">Use Camera</string>
    <string name="continu">Continue</string>
    <string name="identification">Identification</string>
    <string name="contact_support">Contact Support</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="send">SEND</string>
    <string name="contact_us">Contact Us</string>
    <string name="invite_contacts">Invite Contacts</string>
    <string name="about">About</string>
    <string name="payment_method">Payment Method</string>
    <string name="my_wallet">My Wallet</string>
    <string name="error_">Error!</string>
    <string name="retry">Retry</string>
    <string name="message">MESSAGE</string>
    <string name="call">CALL</string>
    <string name="pickup_request">Pickup Request</string>
    <string name="my_profile">My Profile</string>
    <string name="support">SUPPORT</string>
    <string name="home">Home</string>
    <string name="online">Online</string>
    <string name="edit">EDIT</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="branch_type">Branch Type</string>
    <string name="banck_name">Banck Name</string>
    <string name="confirm">CONFIRM</string>
    <string name="update">UPDATE</string>
    <string name="bank_details">Bank Details</string>
    <string name="payouts_details">Payouts Details</string>
    <string name="schedule">Schedule</string>
    <string name="statistics">Statistics</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="procced">Procced</string>
    <string name="google_maps_key" translatable="false">AIzaSyAzzSNl6FRgZyl8QlihOlF6dLKbjzr61oI</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="error_empty_all_fields">Please fill all the fields</string>
    <string name="error_empty_add_post_all_fields">Please select image and add description first</string>
    <string name="error_empty_fname">Please enter first name</string>
    <string name="error_empty_fullname">Please enter full name</string>
    <string name="error_empty_sname">Please enter surname</string>
    <string name="error_empty_username">Please enter username</string>
    <string name="error_empty_email">Please enter email</string>
    <string name="error_empty_password">Please enter password</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="please_enter_country">Please enter country</string>
    <string name="error_empty_country_Code">Please select country code</string>
    <string name="error_empty_phone_number">Please enter phone number</string>
    <string name="error_empty_city">Please enter select city</string>
    <string name="error_empty_subject">Please enter subject</string>
    <string name="error_empty_phone_number_limit">Phone number should be mininum 10 digits</string>
    <string name="error_accpet_terms_conditions1">Please accept the terms and conditions. </string>
    <string name="error_image_mandetory">Please upload image</string>
    <string name="error_empty_dob">Please select date of birth</string>
    <string name="error_empty_gender">Please select gender</string>
    <string name="error_mismatch_password">Password and confirm password does not match.</string>
    <string name="error_country_code">Select country code</string>
    <string name="error_password_short_length">Password contain at least 8 characters,\u0020 contain at least one uppercase letter,\u0020 contain at least one lowercase letter,\u0020 contain at least one number</string>
    <string name="error_empty_confirm_password">Please enter confirm password</string>
    <string name="add_choose_action">Choose action</string>
    <string name="session_expired">Session Expired</string>
    <string name="unable_to_connect_server">Unable to connect to server.</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resend_otp">Resend code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral_code_if_any">Referral code(If any)</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="share_and_win">Share and Win</string>
    <string name="get_your_fee_10_credit_by_inviting_your_friends">Get your fee 10$ Credit by inviting your friends</string>
    <string name="share_your_code">Share your code</string>
    <string name="agree_with">Agrees with</string>
    <string name="registration">Registration</string>
    <string name="share_referral_code">Invite Friends, Get Rewards </string>
    <string name="select_city">Select City</string>
    <string name="year">Year</string>
    <string name="job_history_details">Job History Details</string>
    <string name="having_problem_with_your_order">Having problem with your order?</string>
    <string name="call_support">Call Support</string>
    <string name="message_support">Message Support</string>
    <string name="or">or</string>
    <string name="chat_with_team">Chat with team</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="order_id">Order ID</string>
    <string name="place_an_order">Place  On Order</string>
    <string name="add_ons">Add ons:</string>
    <string name="total">Total =</string>
    <string name="total_">Total</string>
    <string name="upload_front_and_back_id_proof">Upload Front and Back side of your ID</string>
    <string name="upload_front_and_back_id_driver">Upload Front and Back side of your Licence</string>
    <string name="upload_id_proof_car">Upload Front and Back side of your ID</string>
    <string name="upload_id_proof_police_record">Upload Front and Back side of your ID</string>
    <string name="select_from_the_gallery">Select from the gallery</string>
    <string name="png_jpg">PNG,JPEG or PDF</string>
    <string name="error_empty_license_details">Please add license details</string>
    <string name="error_empty_id_details">Please add ID details</string>
    <string name="error_license_no">Please add license number</string>
    <string name="error_id_no">Please add id number</string>
    <string name="error_add_dob">Please add date of birth</string>
    <string name="error_firstname">Please add firstname</string>
    <string name="error_lastname">Please add lastname</string>
    <string name="error_empty_license_issuedate">Please add license issue date</string>
    <string name="error_empty_license_expiry_date">Please add license expiry date</string>
    <string name="error_empty_id_issuedate">Please add ID issue date</string>
    <string name="error_empty_id_expiry_date">Please add ID expiry date</string>
    <string name="error_empty_naitionality">Please add nationality</string>
    <string name="error_empty_license_type">Please select license type</string>
    <string name="error_empty_address">Please add address</string>
    <string name="error_empty_vehical_model">Please add vehical model</string>
    <string name="error_empty_vehical_make">Please add vehical make</string>
    <string name="error_empty_vehical_color">Please add vehical color</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="countryName">Bahamas</string>
    <string name="error_empty_bank_details">Please add bank details</string>
    <string name="error_beneficiary_name">Please add beneficiary name</string>
    <string name="error_bank_name">Please add bank name</string>
    <string name="error_account_number">Please add account number</string>
    <string name="error_confirm_account_number">Please add confirm account number</string>
    <string name="error_mismatch_account_number">Mismatch account number</string>
    <string name="error_account_type">Please select account type</string>
    <string name="error_bank_brank_name">Please add bank branch</string>
    <string name="error_empty_payout_details">Please add payouts details</string>
    <string name="error_first_name">Please first name</string>
    <string name="error_last_name">Please last name</string>
    <string name="error_dob">Please add date of birth</string>
    <string name="error_empty_nib_number">Please add NIB Number</string>
    <string name="error_mismatch_nib_number">Mismatch NIB number</string>
    <string name="error_empty_current_passoword">Please enter current password.</string>
    <string name="error_empty_new_password">Please enter new password.</string>
    <string name="id_number">ID Number</string>
    <string name="address">Address</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="job_history">Job History</string>
    <string name="total_tips_earned">Total Tips Earned:</string>
    <string name="refferal_reward">Refferal Reward:</string>
    <string name="inactive_penalty">Inactive Penalty:</string>
    <string name="total_deliver_fee">Total Delivery Fee:</string>
    <string name="date_of_issue">Date of Issue</string>
    <string name="add">Add</string>
    <string name="add_id_details_message">No details added yet. Tab to Add button to add id details</string>
    <string name="no_data_available">No data available</string>
    <string name="search_location">Search location</string>
    <string name="select_location">Select Location</string>
    <string name="clear_filter"><u>Clear filter</u></string>
    <string name="filter_by">Filter By</string>
    <string name="apply">Apply</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="license_details">License Details</string>
    <string name="vehical_model">Vehicle Model</string>
    <string name="vehical_make">Vehicle Make</string>
    <string name="vehical_color">Vehicle Color</string>
    <string name="nib_number">NIB Number</string>
    <string name="confirm_nib_number">Confirm NIB Number</string>
</resources>