<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@color/White">


    <RelativeLayout
        android:id="@+id/tv_filtere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_clearFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/clear_filter"
            android:textColor="@color/Red"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="12dp"
            android:text="@string/filter_by"
            android:textColor="@color/Black"
            android:textSize="@dimen/_10sdp" />

        <ImageView
            android:id="@+id/iv_cross_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_close_24" />


    </RelativeLayout>

    <View
        android:id="@+id/view_ss"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tv_filtere"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_ss"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/green_border"
        android:gravity="center"
        android:hint="@string/select_start_date"
        android:padding="12dp"
        android:textColor="@color/Black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_start_date"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/green_border"
        android:gravity="center"
        android:hint="@string/select_end_date"
        android:padding="12dp"
        android:textColor="@color/Black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_end_date"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/green_border"
        android:backgroundTint="@color/Black"
        android:gravity="center"
        android:hint="@string/apply"
        android:padding="12dp"
        android:textColor="@color/White"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/_12sdp" />

</RelativeLayout>