<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hedder"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/hedder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Image_icon"
            style="@style/ImageIcon">
        </ImageView>

        <RelativeLayout
            android:id="@+id/Relativ_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Image_icon">

        <LinearLayout
            android:id="@+id/Login_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/et_username"
                    style="@style/EditextField"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:hint="@string/email"
                    android:inputType="text"                   >

                </EditText>

                <EditText
                    android:imeOptions="actionDone"
                    android:id="@+id/et_password"
                    style="@style/EditextField"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:maxLength="20">
                </EditText>

                <Button
                    android:id="@+id/Button_login"
                    style="@style/CustomButton"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/login">
                </Button>
        </LinearLayout>

            <TextView
                android:id="@+id/tv_forgotpass"
                android:layout_below="@+id/Login_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_5sdp"
                style="@style/ScreenTextView2"
                android:textSize="@dimen/_7sdp"
                android:layout_marginRight="@dimen/_45sdp"
                android:onClick="tv_forgotpass"
                android:text="@string/forgot_password"
                android:textColor="@color/LLgray">
            </TextView>
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/Relativ_login">

            <TextView
                style="@style/ScreenTextView1"
                android:layout_below="@+id/Login_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="2dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/White">
            </TextView>

            <TextView
                android:id="@+id/Tv_signup"
                android:onClick="Tv_signup"
                style="@style/ScreenTextView1"
                android:layout_below="@+id/Login_layout"
                android:layout_alignParentEnd="true"
                android:text="@string/sign_up"
                android:layout_marginLeft="2dp"
                android:textColor="@color/Greenapp">
            </TextView>
        </LinearLayout>
    </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>